# RoLint

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  rolint_results.json  setup.cfg
RoLint/: cli.py  main.py
RoLint/parser/: parser.py
examples/: bad_code.c  bad_code_two.c  bad_cpp_code.cpp  bad_header.h  bad_py_code.py  good_header.h
rolint/: cli.py  main.py
rolint.egg-info/: SOURCES.txt  requires.txt
rolint/parser/: parser.py
rolint/reporter/: json.py
rolint/rules/: c_rules.py  cpp_rules.py  override.py  python_rules.py  struct_table_builder.py
rolint/rules/c_rule_functions/: control_flow_rules.py  type_safety.py
