[project]
name = "rolint"
version = "0.1.0"
description = "RoLint - A multi-language linter for safe robotic software development (C, C++, Python)"
authors = [{ name = "Maddux Berry", email = "madduxberry31@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "tree_sitter>=0.20.1",
    "tree_sitter_languages>=1.10.2",
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "flake8>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "mypy>=1.0",
    "isort>=5.12"
]

[project.scripts]
rolint = "rolint.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rolint"]
